--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
-version: "3.7"
+version: "3.9"
 
 services:
   database:
     image: postgres
     container_name: database_clinic
-    # restart: always
+    restart: always
     ports:
       - 5432:5432
     environment:
@@ -16,7 +16,7 @@ services:
   app:
     build: .
     container_name: clinic
-    # restart: always
+    restart: always
     ports:
       - 3333:3333
     volumes:
