--- a/ormconfig.json
+++ b/ormconfig.json
@@ -4,5 +4,10 @@
   "host": "localhost",
   "username": "docker",
   "password": "clinic321",
-  "database": "clinic"
+  "database": "clinic",
+  "migrations": ["./src/shared/infra/typeorm/migrations/*.ts"],
+  "entities": ["./src/modules/**/entities/*.ts"],
+  "cli": {
+    "migrationsDir": "./src/shared/infra/typeorm/migrations"
+  }
 }
