--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev src/shared/infra/http/server.ts",
-    "typeorm": "ts-node-dev ./node_modules/typeorm/cli"
+    "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules --respawn --poll src/shared/infra/http/server.ts",
+    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli",
+    "test": "jest --runInBand --detectOpenHandles"
   },
   "dependencies": {
     "-": "^0.0.1",
@@ -21,7 +22,7 @@
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "supertest": "^6.3.3",
-    "swagger-ui-express": "^4.5.0",
+    "swagger-ui-express": "^4.6.2",
     "tsyringe": "^4.7.0",
     "typeorm": "0.2.45",
     "uuid": "^9.0.0"
@@ -29,14 +30,14 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.14",
-    "@types/jest": "^29.2.3",
+    "@types/jest": "^29.4.0",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/nodemailer": "^6.4.7",
     "@types/supertest": "^2.0.12",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^9.0.0",
-    "jest": "^29.3.1",
-    "ts-jest": "^29.0.3",
+    "jest": "^29.4.3",
+    "ts-jest": "^29.0.5",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.1.0",
     "typescript": "^4.8.3"
