--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,11 +7,11 @@
     "rootDir": "./",
     "baseUrl": "./src",
     "paths": {
-      //"@modules/*": ["modules/*"],
-      //"@config/*": ["config/*"],
-      // "@shared/*": ["shared/*"],
-      // "@errors/*": ["errors/*"],
-      //"@utils/*": ["utils/*"]
+      "@modules/*": ["modules/*"],
+      "@config/*": ["config/*"],
+      "@shared/*": ["shared/*"],
+      "@errors/*": ["errors/*"],
+      "@utils/*": ["utils/*"]
     },
     "resolveJsonModule": true,
     "esModuleInterop": true,
