--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
       "@config/*": ["config/*"],
       "@shared/*": ["shared/*"],
       "@errors/*": ["errors/*"],
-      "@utils/*": ["utils/*"]
+      "@utils/*": ["utils/*"],
     },
     "resolveJsonModule": true,
     "esModuleInterop": true,
