--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,7 +1,7 @@
 {
   "type": "postgres",
   "port": 5432,
-  "host": "localhost",
+  "host": "database",
   "username": "docker",
   "password": "clinic321",
   "database": "clinic",
